src/test/ui/parser/issue-14303-enum.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-enum.rs:1:15
   |
LL | enum X<'a, T, 'b> {
   |               ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | enum X<'a, 'b, T> {
   |            ^^^ --

error: aborting due to previous error

